# video-transcriber-mcp-rs

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  install.sh
.github/workflows/: release.yml
homebrew/: video-transcriber-mcp.rb
scripts/: download-models.sh  http-proxy.js  test-http-mcp.sh  test-mcp-client.py
src/: auth.rs  credits.rs  lib.rs  llm.rs  main.rs
src/api/: handlers.rs  jobs.rs  mod.rs  stripe.rs
src/mcp/: mod.rs  server.rs  server_rmcp.rs  types.rs
src/transcriber/: audio.rs  downloader.rs  engine.rs  mod.rs  types.rs  whisper.rs
src/utils/: paths.rs
